# space_invaders

./: Cargo.toml
saves/: space_invaders_achievements.json
src/: achievements.rs  constants.rs  drawing.rs  effects.rs  gameplay_tests.rs  main.rs  menu.rs  spawning.rs  types.rs
src/gameplay/: combat.rs  flow.rs  formation.rs  mod.rs  players.rs  ufo.rs
